# autofeeder

./: .gitignore  alembic.ini  pyproject.toml
app/: config.py  logger.py  main.py
app/domain/: base.py  models.py
app/domain/models/: __init__.py  auction.py  report.py  schemas.py  stored_report.py
app/infrastructure/: api_client.py  database.py  transformers.py
app/services/: report_monitor.py
app/utils/: enums.py  exceptions.py  validators.py
migrations/: env.py
migrations/versions/: 57f27f360071_altered_latestreports_table.py  5d7b2e9bafdf_removed_uuid_from_report_and_added_index.py  64896e3a3f95_add_unique_constraint_to_reports.py  90ceb9711395_added_tables.py  c4241cd49c8c_added_reports_table.py
scripts/: run_snippet.py  run_tests.py
tests/: conftest.py  test_main.py  test_snippet.py
tests/domain/models/: test_auction.py  test_latest_report.py  test_report.py  test_report_response.py  test_reports.py  test_schemas.py  test_stored_report.py
tests/infrastructure/: test_api_client.py  test_api_client_integration.py  test_database.py  test_database_integration.py  test_transformers.py
tests/services/: test_report_monitor.py  test_report_monitor_integration.py
tests/utils/: test_enums.py  test_validators.py
